--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,9 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install LaTeX
-        run: sudo apt-get update && sudo apt-get install -y \
-       texlive-latex-base texlive-latex-extra texlive-fonts-recommended \
-       texlive-bibtex-extra biber texlive-fonts-extra
+        run: sudo apt-get update && sudo apt-get install -y texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-bibtex-extra biber texlive-fonts-extra
 
       - name: Compile imeko-bare-article.tex
         run: |
