--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,7 @@ name: Create Release ZIP
 on:
   push:
     tags:
-      - 'v*'  # Triggers only on version tags (e.g., v1.0, v2.1)
+      - 'v*'  # Triggers on version tags (e.g., v1.0, v2.1)
 
 jobs:
   build:
@@ -13,25 +13,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install LaTeX
-        run: sudo apt-get update && sudo apt-get install -y texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-bibtex-extra biber texlive-fonts-extra
+      - name: Build LaTeX Docker Image
+        run: docker build -t latex-builder .
+
+      - name: Prepare LaTeX Compilation (Copy Class Files)
+        run: cp -r class/. "bare article template/"
 
       - name: Compile imeko-bare-article.tex
         run: |
-          cp -r class/. bare\ article\ template
-          cd "bare article template"
-          pdflatex imeko-bare-article.tex
-          bibtex imeko-bare-article
-          pdflatex imeko-bare-article.tex
-          pdflatex imeko-bare-article.tex
-          mv imeko-bare-article.pdf ../
+          docker run --rm -v ${{ github.workspace }}:/workdir latex-builder \
+          bash -c "cd 'bare article template' && pdflatex imeko-bare-article.tex && bibtex imeko-bare-article && pdflatex imeko-bare-article.tex && pdflatex imeko-bare-article.tex"
 
       - name: Compile guide.tex
         run: |
-          cd guide
-          pdflatex guide.tex
-          pdflatex guide.tex
-          mv guide.pdf ../
+          docker run --rm -v ${{ github.workspace }}:/workdir latex-builder \
+          bash -c "cd guide && pdflatex guide.tex && pdflatex guide.tex"
 
       - name: Prepare release directory
         run: |
@@ -39,9 +35,8 @@ jobs:
           cp -r class release/
           cp -r "bare article template" release/
           cp -r "Original Acta IMEKO template" release/
-          cp guide.pdf release/bare\ article\ template/
-          cp imeko-bare-article.pdf release/bare\ article\ template/
-          cp -r class/* release/bare\ article\ template/
+          cp guide/guide.pdf release/bare\ article\ template/
+          cp bare\ article\ template/imeko-bare-article.pdf release/bare\ article\ template/
 
       - name: Create ZIP archive
         run: zip -r imeko_acta_release.zip release
